--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -97,7 +97,7 @@ grid.arrange(p1, p2, ncol = 2)
 ## Figure 3: cTWAS estimates genetic architecture of complex traits from GTEx
 
 ### Figure 3a: Tissues are often correlated: but one tissue is not enough.
-```{r}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=10}
 thin <- 1
 vgs <- "shared_all"
 L <-5
@@ -150,7 +150,7 @@ p <- grid.arrange(pie1, pie2, pie3,
 ```
 
 ### Figure 3b: Shared pattern
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=8, fig.height=4}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=6, fig.width=10}
 trait <- "LDL-ukb-d-30780_irnt"
 out <- plot_pairwise_PVE(trait, samplesize, n_top = 10)
 ```
