--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -51,9 +51,9 @@ editor_options:
 
 ### Exploring genetic architecture
 
-[LDL, IBD: different qtl combination](realdata_final_combine_qtls_3qtls.html)
-
-[PVE share pattern](realdata_final_PVE_share_pattern.html)
+  * [LDL, IBD: different qtl combination](realdata_final_combine_qtls_3qtls.html)
+  * [PVE share pattern - ranking tissue by gene number](realdata_final_PVE_share_pattern.html)
+  * [PVE share pattern - ranking tissue by PHE](realdata_final_PVE_share_pattern_rankPHE.html)
 
 ### Tissue selection
 
