--- a/analysis/realdata_final_PVE_share_pattern.Rmd
+++ b/analysis/realdata_final_PVE_share_pattern.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PVE share pattern"
+title: "PVE share pattern, tissue ranked by number of genes at PIP > 0.8"
 author: "XSun"
 date: "2025-08-06"
 output:
@@ -14,10 +14,13 @@ We ranked tissues by the number of genes identified in single-tissue eQTL analys
 
 From the 10 selected tissues, we obtained 45 unique tissue pairs. For each pair, we   
 
-For each tissue pair \((A, B)\), we first estimated the PHE of tissue \(A\) when analyzed alone (in single-tissue eQTL/sQTL analysis), and then conducted both two-tissue eQTL and two-tissue sQTL analyses to estimate the PHE of each tissue in the joint analysis. We then calculated the relative change as:  
+For each tissue pair \((A, B)\), we first estimated the PHE of tissue \(A\) when analyzed alone (in single-tissue eQTL/sQTL analysis), and then conducted both two-tissue eQTL and two-tissue sQTL analyses to estimate the PHE of each tissue in the joint analysis. 
+
+For tissue A, \[\text{PHE}_{\text{single}}\] is the PHE from single tissue analysis,  \[\text{PHE}_{\text{joint}}\] is the PHE from 2 tissue joint analysis, we then calculated the relative change as:  
+
 
 \[
-\frac{\text{PHE}_{\text{joint}} - \text{PHE}_{\text{single}}}{\text{PHE}_{\text{single}}}
+\frac{\text{PHE}_{\text{single}} - \text{PHE}_{\text{joint}}}{\text{PHE}_{\text{single}}}
 \]
 
 
