--- a/analysis/realdata_final_PVE_share_pattern.Rmd
+++ b/analysis/realdata_final_PVE_share_pattern.Rmd
@@ -135,7 +135,7 @@ for (trait  in traits){
     
     tissue_pair <- paste0(tissue_combination[[i]], collapse = "-")
     
-    file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_byPHE/",trait,"/",trait,".",tissue_pair,".eqtlonly.thin1.shared_all.param.RDS")
+    file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_bynumber/",trait,"/",trait,".",tissue_pair,".eqtlonly.thin1.shared_all.param.RDS")
     param_pair <- readRDS(file_param_pair)
     ctwas_parameters_pair <- summarize_param(param_pair, gwas_n, enrichment_test = "fisher")
     
@@ -151,6 +151,8 @@ for (trait  in traits){
   
   }
   
+  prob_pve_alltissue <- prob_pve_alltissue[rownames(mat)]
+  prob_pve_alltissue <- round(prob_pve_alltissue*100,digits = 2)
 
   
   if (any(mat < 0, na.rm = TRUE)) {
@@ -162,6 +164,8 @@ for (trait  in traits){
       c(mat_range[1], 0, mat_range[2]),  # min (neg), 0, max (pos)
       c("blue", "white", "red")          # colors
     )
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
     ht1 <- Heatmap(mat,
             name = "%PVE decrease",
@@ -180,6 +184,8 @@ for (trait  in traits){
     
     
   }else{
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
        ht1 <- Heatmap(mat,
           name = "%PVE decrease",
@@ -217,6 +223,8 @@ for (trait  in traits){
   
   names(prob_pve_alltissue) <- gsub(pattern = "\\|sQTL",x = names(prob_pve_alltissue), replacement = "")
   
+      mat <- matrix(NA, nrow = length(top_tissues), ncol = length(top_tissues),
+                dimnames = list(top_tissues, top_tissues))
   
   for (i in 1:length(tissue_combination)){
     
@@ -227,7 +235,7 @@ for (trait  in traits){
     
     tissue_pair <- paste0(tissue_combination[[i]], collapse = "-")
     
-    file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_byPHE/",trait,"/",trait,".",tissue_pair,".sqtlonly.thin1.shared_all.param.RDS")
+    file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_bynumber/",trait,"/",trait,".",tissue_pair,".sqtlonly.thin1.shared_all.param.RDS")
     param_pair <- readRDS(file_param_pair)
     ctwas_parameters_pair <- summarize_param(param_pair, gwas_n, enrichment_test = "fisher")
     
@@ -243,6 +251,9 @@ for (trait  in traits){
   
   }
   
+  prob_pve_alltissue <- prob_pve_alltissue[rownames(mat)]
+  prob_pve_alltissue <- round(prob_pve_alltissue*100,digits = 2)
+  
 
   if (any(mat < 0, na.rm = TRUE)) {
     
@@ -253,6 +264,8 @@ for (trait  in traits){
       c(mat_range[1], 0, mat_range[2]),  # min (neg), 0, max (pos)
       c("blue", "white", "red")          # colors
     )
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
     ht2 <- Heatmap(mat,
             name = "%PVE decrease",
@@ -271,6 +284,8 @@ for (trait  in traits){
     
     
   }else{
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
        ht2 <- Heatmap(mat,
           name = "%PVE decrease",
@@ -354,7 +369,7 @@ for (trait  in traits){
 
 <!--     tissue_pair <- paste0(tissue_combination[[i]], collapse = "-") -->
 
-<!--     file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_byPHE/",trait,"/",trait,".",tissue_pair,".eqtlonly.thin1.shared_all.param.RDS") -->
+<!--     file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_bynumber/",trait,"/",trait,".",tissue_pair,".eqtlonly.thin1.shared_all.param.RDS") -->
 <!--     param_pair <- readRDS(file_param_pair) -->
 <!--     ctwas_parameters_pair <- summarize_param(param_pair, gwas_n, enrichment_test = "fisher") -->
 <!--     prob_pve_sum <- ctwas_parameters_pair$prop_heritability[1] + ctwas_parameters_pair$prop_heritability[2]  -->
@@ -434,7 +449,7 @@ for (trait  in traits){
 
 <!--     tissue_pair <- paste0(tissue_combination[[i]], collapse = "-") -->
 
-<!--     file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_byPHE/",trait,"/",trait,".",tissue_pair,".sqtlonly.thin1.shared_all.param.RDS") -->
+<!--     file_param_pair <- paste0("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/pairwise_snakemake_outputs_bynumber/",trait,"/",trait,".",tissue_pair,".sqtlonly.thin1.shared_all.param.RDS") -->
 <!--     param_pair <- readRDS(file_param_pair) -->
 <!--     ctwas_parameters_pair <- summarize_param(param_pair, gwas_n, enrichment_test = "fisher") -->
 <!--     prob_pve_sum <- ctwas_parameters_pair$prop_heritability[1] + ctwas_parameters_pair$prop_heritability[2]  -->
