--- a/analysis/realdata_final_PVE_share_pattern_rankPHE.Rmd
+++ b/analysis/realdata_final_PVE_share_pattern_rankPHE.Rmd
@@ -207,7 +207,8 @@ for (trait  in traits){
   
   }
   
-
+  prob_pve_alltissue <- prob_pve_alltissue[rownames(mat)]
+  prob_pve_alltissue <- round(prob_pve_alltissue*100,digits = 2)
   
   if (any(mat < 0, na.rm = TRUE)) {
     
@@ -218,6 +219,8 @@ for (trait  in traits){
       c(mat_range[1], 0, mat_range[2]),  # min (neg), 0, max (pos)
       c("blue", "white", "red")          # colors
     )
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
     ht1 <- Heatmap(mat,
             name = "%PVE decrease",
@@ -236,6 +239,8 @@ for (trait  in traits){
     
     
   }else{
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
        ht1 <- Heatmap(mat,
           name = "%PVE decrease",
@@ -273,6 +278,8 @@ for (trait  in traits){
   
   names(prob_pve_alltissue) <- gsub(pattern = "\\|sQTL",x = names(prob_pve_alltissue), replacement = "")
   
+    mat <- matrix(NA, nrow = length(top_tissues_phe), ncol = length(top_tissues_phe),
+                dimnames = list(top_tissues_phe, top_tissues_phe))
   
   for (i in 1:length(tissue_combination)){
     
@@ -299,6 +306,10 @@ for (trait  in traits){
   
   }
   
+  prob_pve_alltissue <- prob_pve_alltissue[rownames(mat)]
+  prob_pve_alltissue <- round(prob_pve_alltissue*100,digits = 2)
+  
+  
 
   if (any(mat < 0, na.rm = TRUE)) {
     
@@ -309,6 +320,8 @@ for (trait  in traits){
       c(mat_range[1], 0, mat_range[2]),  # min (neg), 0, max (pos)
       c("blue", "white", "red")          # colors
     )
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
     ht2 <- Heatmap(mat,
             name = "%PVE decrease",
@@ -327,6 +340,8 @@ for (trait  in traits){
     
     
   }else{
+    
+    rownames(mat) <- paste0(rownames(mat)," ",prob_pve_alltissue,"%")
     
        ht2 <- Heatmap(mat,
           name = "%PVE decrease",
