--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -150,7 +150,7 @@ p <- grid.arrange(pie1, pie2, pie3,
 ```
 
 ### Figure 3b: Shared pattern
-```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=6, fig.width=10}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=6, fig.width=10}
 trait <- "LDL-ukb-d-30780_irnt"
 out <- plot_pairwise_PVE(trait, samplesize, n_top = 10)
 ```
